--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,33 @@
-on: push
+name: Simple Spring Boot CI Practice
+
+# 1. 定义触发工作流程的事件
+on:
+  push: # 当代码推送到任何分支时触发 (练习时可以更宽松)
+    branches:
+      - main # 你可以改成你的主要开发分支，或者移除 branches 来让所有分支的 push 都触发
+  pull_request: # 当有拉取请求到 main 分支时触发
+    branches:
+      - main
 
 jobs:
-  job1:
-    runs-on: ubuntu-latest
+  # 2. 定义构建和测试作业
+  build-and-test:
+    name: Build and Test Spring Boot App
+    runs-on: ubuntu-latest # 使用最新的 Ubuntu 运行器
+
     steps:
-    - run: pwd
-    - run: ls
-  job2:
-    runs-on: ubuntu-latest
-    steps:
-    - run: node --version
+      - name: Checkout code
+        uses: actions/checkout@v4 # 检出你的代码库
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17' # 指定 JDK 版本 (根据你的项目调整)
+          distribution: 'temurin'
+          cache: 'maven' # 自动缓存 Maven 依赖
+
+      - name: Build and Test with Maven Wrapper
+        # -B 表示批处理模式，适合CI环境
+        # 'package' 会编译、测试并打包应用
+        run: ./mvnw -B package
+        # 如果你用的是 Gradle，这里应该是: ./gradlew build
